Project

General

Profile

Actions

Bug #18639

closed

multisite: incremental metadata sync does not properly advance to next period

Added by Casey Bodley over 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

There are 3 bugs present:

  • RGWMetaSyncCR does not correctly detect whether the syncing period is the current_period
  • RGWMetaSyncShardCR incorrectly compares the markers between different period logs
  • when RGWMetaSyncShardCR is done with a period, RGWBackoffControlCR retries RGWMetaSyncShardCR on the same period

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19847: jewel: multisite: incremental metadata sync does not properly advance to next periodResolvedCasey BodleyActions
Copied to rgw - Backport #19848: kraken: multisite: incremental metadata sync does not properly advance to next periodRejectedActions
Actions #1

Updated by Casey Bodley over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Casey Bodley about 7 years ago

tests for this also need review in https://github.com/ceph/ceph/pull/13067

Actions #3

Updated by Casey Bodley almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #19847: jewel: multisite: incremental metadata sync does not properly advance to next period added
Actions #5

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #19848: kraken: multisite: incremental metadata sync does not properly advance to next period added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF