rgw: fix marker comparison to detect end of mdlog period

Fixes: http://tracker.ceph.com/issues/18639

Signed-off-by: Casey Bodley <cbodley@redhat.com>